k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-tf
  namespace: demo-tf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app-tf
  template:
    metadata:
      labels:
        app: test-app-tf
    spec:
      containers:
      - name: test-app-tf
        image: 222964728025.dkr.ecr.eu-central-1.amazonaws.com/techchallenge/test-app:latest
        ports:
        - containerPort: 80
