k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc-tf
  namespace: demo-tf
spec:
  type: ClusterIP
  selector:
    app: test-app-tf
  ports:
  - port: 80
    targetPort: 80
